syntax = "proto3";

package proto.oauth.v1;

option go_package = "github.com/nikumar1206/loco/proto/oauth/v1;oauthv1";


message GithubOAuthDetailsRequest {}
message GithubOAuthDetailsResponse {
  string client_id = 1;
  double token_ttl = 2;
}

service OAuthService {
  rpc GithubOAuthDetails(GithubOAuthDetailsRequest) returns (GithubOAuthDetailsResponse) {}
}
